--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@
     width: 30%;
     margin-left: 10px;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     font-family: karla;
   }
 .jumbotron {
